# tree-sitter-scheme

./: .gitignore  Cargo.toml  README.adoc  binding.gyp  example  grammar.js  highlights.scm  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: abbreviations.txt  booleans.txt  bytevectors.txt  characters.txt  comments.txt  directives.txt  identifiers.txt  lists.txt  numbers.txt  strings.txt  symbols.txt  vectors.txt  whitespace.txt
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
