[package]
name = "tree-sitter-scheme"
description = "A Scheme grammar for Tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "scheme"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/austinmlv/tree-sitter-scheme"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
